prevent scrolling on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,20 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
+  html, body {
+    height: 100%;
+  }
+  body {
+    position: fixed;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    background: 0 0;
+    -webkit-overflow-scrolling: touch;
+    overflow-x: auto;
+    overflow-y: scroll;
+  }
   .modal {
     font-size: 65px;
   }
